msa/k8s_ingress_certificate/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ordersystem-ingress
  namespace: yo  
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - "server.teenkiri.store"
    secretName: yohan-com-tls
  rules:
    - host: server.teenkiri.store
      http: 
        paths:
          - path: /member-service/(.*)
            pathType: Prefix
            backend:
              service:
                name: member-service
                port: 
                  number: 80


          - path: /order-service/(.*)
            pathType: Prefix
            backend:
              service:
                name: order-service
                port: 
                  number: 80


          - path: /product-service/(.*)
            pathType: Prefix
            backend:
              service:
                name: product-service
                port: 
                  number: 80
